test/tests/stages/17_supporting_dynamic_memory_allocation/valid/sizeof/sizeof_result_is_ulong.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[42]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  sizeof
  sizeof
  (
  char
  )
  !=
  const int(8)
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  sizeof
  const int(4)
  -
  sizeof
  const int(4)
  -
  const int(1)
  <
  const int(0)
  )
  {
  return
  const int(2)
  ;
  }
  return
  const int(0)
  ;
  }
