test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  void
  identifier(arr)
  [
  const int(3)
  ]
  ;
  return
  const int(0)
  ;
  }
